# ByteChain-Testnet-Alpha

./: .gitignore  Cargo.toml  README.md
backend/: package-lock.json  package.json  server.js
backend/client/: wallet.js  walletServer.js
backend/client/src/: wallet.js
backend/core/: block.js  blockchain.js  merkleTree.js  node.js  nodes.js  test.js  transaction.js  virtualMachine.js  wallet.js
backend/servers/: blockchainServer.js  nodeServer.js  server.js  vmServer.js  walletServer.js
backend/util/: util.js
backend/vm/: virtualMachine.js
client/: package-lock.json  package.json
client/src/: wallet.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Header.jsx  Navbar.jsx
frontend/src/components/header/: header.css  index.jsx
frontend/src/components/navbar/: index.jsx  navbar.css
frontend/src/layouts/: RootLayout.jsx
frontend/src/pages/: Wallet.jsx
src/core/: block.rs
