[package]
name = "ByteChain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9"
ring = "0.16"
rand = "0.8"
sled = "0.34"
rocksdb = "0.18"
ed25519-dalek = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
criterion = "0.3"
libp2p = "0.43"
tokio = { version = "1", features = ["full"] }